--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="sqlite-jdbc-3.23.1.jar"/>
 	<classpathentry kind="lib" path="LPSOLVESolverPack.jar"/>
 	<classpathentry kind="lib" path="SCPSolver.jar"/>
+	<classpathentry kind="lib" path="GLPKSolverPack.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
